# -change-ledger

./: .gitignore  Cargo.toml  README.md
crypto_tran/: .env  Cargo.toml  diesel.toml  private_key.pem  private_key_answerer.pem  private_key_offerer.pem  public_key.pem  public_key_answerer.pem  public_key_offerer.pem  transactions.db
crypto_tran/migrations/2024-10-30-091051_create_transactions/: up.sql
crypto_tran/src/: lib.rs  main.rs  schema.rs
crytp_4_flutter/: Cargo.toml  readme.md
crytp_4_flutter/src/: lib.rs
crytp_4_flutter/src/src/: frb_generated.rs
p2p_via_files/: Cargo.toml  answer.json  offer.json
p2p_via_files/src/: lib.rs  peer1.rs  peer2.rs
rust_n_flutter/: README.md  pubspec.yaml  rsa_private_key.pem  rsa_public_key.pem
rust_n_flutter/android/app/: build.gradle
rust_n_flutter/assets/config/: config-dobyunki.json  config-tiffanie.json
rust_n_flutter/integration_test/: simple_test.dart
rust_n_flutter/ios/Runner/: Info.plist
rust_n_flutter/ios/Runner.xcodeproj/: project.pbxproj
rust_n_flutter/lib/: config.dart  database_helper.dart  keymanager.dart  main.dart  rtc_network.dart  signaling.dart
rust_n_flutter/linux/: CMakeLists.txt  my_application.cc
rust_n_flutter/linux/flutter/: generated_plugins.cmake
rust_n_flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
rust_n_flutter/rust/: Cargo.toml
rust_n_flutter/rust/src/: frb_generated.rs
rust_n_flutter/rust/src/api/: cryptotran.rs  mod.rs
rust_n_flutter/rust_builder/: README.md  pubspec.yaml
rust_n_flutter/web/: index.html  manifest.json
rust_n_flutter/windows/: CMakeLists.txt
src/: lib.rs  main.rs
stun_test/: Cargo.toml
stun_test/src/: main.rs
(+20 files in other folders)
