[package]
name = "crytp_4_flutter"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"  # AES-GCM 지원
cipher = "0.4"
rsa = "0.9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.13"     # Base64 인코딩 및 디코딩을 위한 크레이트
sha2 = { version = "0.10", features = ["oid"] }
signature = "1.6.2"  # 서명 및 검증을 위한 크레이트
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.flutter_rust_bridge]
version = "2.6.0"

[lib]
crate-type = ["cdylib", "staticlib"]  # cdylib 는 Android/Windows 용, staticlib 는 iOS 용